# iq-sdk

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  format.md  index.md
docs/stylesheets/: extra.css
src/iq_sdk/: __init__.py  data_loader.py  dataloader.py
tests/: test_dataloader.py
